# imprints

./: .gitignore  .simd_imprints.c.swp  Makefile  README.md  helpers.c  imprints.c  leanfingerprint.c  leanfingerprint.h  print.c  queries.c  run-all.sh  run-simd1.sh  run.sh  simd1-bitwidth.tsv  simd1-run.sh  simd1.c  simd_imprints.c  simd_imprints.h  utils.c  zonemaps.c
DaMoN-paper/: damon2017-simd-imprints.tex
DaMoN-paper/presentation/: damon17.odp
SIGMOD-paper/: Makefile  Makefile.rules  background.tex  construction.tex  evaluation.tex  introduction.tex
SIGMOD-paper/figs/: cfpstruct.pstex_t  example2.fig  rppdensity.eps
SIGMOD-paper/figs/static/: cumul-backup.eps  cumul.eps  entropy-backup.eps  snap1.tex  snap2.tex  snap4.tex  snap5.tex  storage_rpp16.eps  storage_rpp8.eps  storagetime_rpp8.eps
SIGMOD-paper/presentation/: sigmod2013.odp
fpga/HW_common/: binary_search.vhd  comparator.vhd  fifo.vhd  imprint_creator.vhd  reorder.vhd
fpga/SW/: Makefile  RuntimeClient.h  iFPGA.cpp  iFPGA.h  main.cpp
include/: main.h
joins/imps-join/: CMakeLists.txt
joins/imps-join/experiments/: CMakeLists.txt  main.c  mainaggr.c
joins/imps-join/src/: CMakeLists.txt  aggregation.c  aggregation.h  barrier.h  common.h  generator.c  generator.h  hashtable.h  hybrid_timer.h  imprints.c  imprints.h  join.c  join.h  params.h  types.h  utils.c  utils.h  vector.h
plots/: all.log.rds  plots.R
publications/DaMoN-paper/: damon2017-simd-imprints.tex  sigproc.bib
publications/DaMoN-paper/presentation/: damon17.odp
publications/SIGMOD-paper/: bibliography.bib  conclusions.tex  imprints.tex  operators.tex  updates.tex
publications/SIGMOD-paper/figs/: bitspread.eps  cfpstruct.fig  cfpstruct.pstex  example1.fig  example3.fig  imprint.fig  storage.eps
publications/SIGMOD-paper/figs/static/: cum_queries.eps  entropy.eps  improv.eps  qtime.eps  (+8 more)
publications/plots/: all2.log.xz  imprints_create.rds  imprints_query.rds
src/: main.c  print.c  queries.c  zonemaps.c
src/legacy/: leanfingerprint.h
